// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser call expressions accepts arguments 1`] = `
[
  Expression {
    "expression": Call {
      "args": [
        Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 1,
          },
        },
        Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 2,
          },
        },
      ],
      "callee": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "add",
        },
      },
      "closingParen": {
        "isReserved": false,
        "kind": "RightParen",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
      "optional": false,
    },
  },
]
`;

exports[`parser call expressions allows closing parentheses on separate line 1`] = `
[
  Expression {
    "expression": Call {
      "args": [],
      "callee": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "RebootSystem",
        },
      },
      "closingParen": {
        "isReserved": false,
        "kind": "RightParen",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
      "optional": false,
    },
  },
]
`;

exports[`parser call expressions does not invalidate the next statement on a multi-statement line 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 5,
          },
          "file": "",
          "start": {
            "column": 28,
            "line": 2,
          },
        },
        "statements": [
          Assignment {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 28,
                  "line": 4,
                },
                "file": "",
                "start": {
                  "column": 24,
                  "line": 4,
                },
              },
              "text": "name",
            },
            "tokens": {
              "equals": {
                "isReserved": false,
                "kind": "Equal",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 30,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 29,
                    "line": 4,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": {
                "end": {
                  "column": 36,
                  "line": 4,
                },
                "file": "",
                "start": {
                  "column": 31,
                  "line": 4,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "bob",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 5,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 5,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 26,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 2,
        },
      },
      "text": "DoThingOne",
    },
  },
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 7,
          },
          "file": "",
          "start": {
            "column": 28,
            "line": 6,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 7,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 7,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 6,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 26,
          "line": 6,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 6,
        },
      },
      "text": "DoThingTwo",
    },
  },
]
`;

exports[`parser call expressions does not invalidate the rest of the file on incomplete statement 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 4,
          },
          "file": "",
          "start": {
            "column": 28,
            "line": 2,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 4,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 4,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 26,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 2,
        },
      },
      "text": "DoThingOne",
    },
  },
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 28,
            "line": 5,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 6,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 5,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 5,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 26,
          "line": 5,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 5,
        },
      },
      "text": "DoThingTwo",
    },
  },
]
`;

exports[`parser call expressions parses named function calls 1`] = `
[
  Expression {
    "expression": Call {
      "args": [],
      "callee": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "RebootSystem",
        },
      },
      "closingParen": {
        "isReserved": false,
        "kind": "RightParen",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
      "optional": false,
    },
  },
]
`;
